--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ opencv-python = "^4.8.1.78"
 pytesseract = "^0.3.10"
 pillow = "^10.1.0"
 easyocr = "^1.7.1"
+gunicorn = "^21.2.0"
 
 
 [build-system]
