--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.10"
 django = "^5.0"
 djangorestframework = "^3.14.0"
-opencv-python = "^4.8.1.78"
+opencv-python-headless = "^4.8.1.78"
 pytesseract = "^0.3.10"
 pillow = "^10.1.0"
 easyocr = "^1.7.1"
