--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ opencv-python-headless = "^4.8.1.78"
 pyyaml = "^6.0.1"
 pandas = "^2.1.4"
 torch = {version = "^2.1.2+cpu", source = "pytorch"}
-torchvision = {version = "^0.16.2+cpu", source = "pytorch"}
 easyocr = "^1.7.1"
 
 
 [[tool.poetry.source]]
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
