--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,18 @@ pyyaml = "^6.0.1"
 pandas = "^2.1.4"
 torch = {version = "^2.1.2+cpu", source = "pytorch"}
 easyocr = "^1.7.1"
+torchvision = {version = "^0.16.2+cpu", source = "pytorch"}
+
+
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "supplemental"
+
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
 
 [build-system]
 requires = ["poetry-core"]
