--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ gunicorn = "^21.2.0"
 opencv-python-headless = "^4.8.1.78"
 pyyaml = "^6.0.1"
 pandas = "^2.1.4"
+django-cors-headers = "^4.3.1"
 
 
 [[tool.poetry.source]]
